# vivarium

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  VISION.md  install.sh  issues.md  renovate.json
.github/workflows/: release.yml
crates/vivi-pty/: Cargo.toml  README.md
crates/vivi-pty/docs/: BRIEF.md
crates/vivi-pty/docs/factory/: GOAL.md
crates/vivi-pty/docs/factory/delivery/: 01-runtime-lifecycle.md  02-terminal-control.md  03-events-and-waits.md  04-driver-framework.md  05-codex-driver.md  06-attachment-leases.md  07-mcp-capabilities.md  08-fleet-binding.md  09-pi-opencode-drivers.md  10-semantic-actions.md
crates/vivi-pty/src/: binding.rs  binding_test.rs  client.rs  codex.rs  codex_test.rs  daemon.rs  daemon_test.rs  driver.rs  driver_conformance_test.rs  driver_test.rs  events.rs  events_test.rs  grok.rs  grok_test.rs  keys.rs  kimi.rs  kimi_test.rs  lease.rs  lease_test.rs  lib.rs  main.rs  main_test.rs  mcp.rs  mcp_test.rs  opencode.rs  opencode_test.rs  operation.rs  operation_test.rs  pi.rs  pi_test.rs  protocol.rs  protocol_test.rs  pty.rs  session.rs  terminal.rs  terminal_test.rs
crates/vivi-pty/src/daemon/: registry.rs
crates/vivi-pty/src/daemon/registry/: control.rs  semantic.rs
crates/vivi-pty/tests/: hygiene.rs
docs/: agent-dispatch-delivery-plan.md  board-performance-goal.md  board-performance-pass-01.md  delivery-plan.md  email-embeddings-plan.md  email-write-send-factory-plan.md  hash-addressed-storage-factory-plan.md  hash-addressed-storage-rewrite.md  inbound-watch.md  local-agent-mail-tasks-delivery-plan.md  local-email-archive-factory-plan.md  local-rendering.md  mailspace-agent-control-plane-goal.md  mailspace-agent-cycle-improvement-requests.md  mailspace-reply-threading-goal.md  mailspace-role-goal.md  mailspace-role-pid-status-goal.md  mailspace-watch-goal.md  memo-kind-goal.md  pharos-bridge-email.md  proton-api-direct-goal.md  proton-api-factory-roadmap.md  proton-api-live-checkpoint.md  proton-api-phase-01-delivery.md  proton-api-phase-02-delivery.md  proton-api-phase-03-delivery.md  proton-api-phase-04-delivery.md  proton-api-phase-05-cache-delivery.md  proton-api-phase-05-delivery.md  proton-api-send-phase-01-delivery.md  proton-api-send-phase-02-delivery.md  proton-api-send-phase-03-delivery.md  proton-bridge-email.md  release-smoke-checks.md  release-v4.0.0.md  release-v4.5.0.md  release-v4.6.0.md  release-v4.7.0.md  release-v4.8.0.md  release-v5.0.0.md  (+13 more)
docs/factory/: email-index-phase-01-delivery.md  email-index-phase-02-delivery.md  email-index-phase-03-delivery.md  email-index-phase-04-delivery.md  email-index-phase-05-delivery.md  email-index-phase-06-delivery.md  mailspace-control-plane-phase-01-delivery.md  mailspace-control-plane-phase-02-delivery.md  mailspace-control-plane-phase-03-release-prep.md  mailspace-control-plane-phase-04-delta-delivery.md  mailspace-watch-delivery.md  (+34 more)
scripts/: pharos-gitolite-sync.sh
src/: agent.rs  agent_runner.rs  catalog.rs  cli.rs  config.rs  config_path_test.rs  doctor_command.rs  draft_runner.rs  draft_runner_test.rs  duration.rs  duration_test.rs  email_index.rs  embeddings.rs  error.rs  extract.rs  extract_test.rs  folders_command.rs  imap.rs  index_runner.rs  init.rs  init_test.rs  label_runner.rs  labels.rs  labels_test.rs  lib.rs  list.rs  list_runner.rs  list_runner_test.rs  list_test.rs  local_board_command.rs  local_mail_list.rs  local_mailspace_command.rs  local_mailspace_dump.rs  local_role_command.rs  local_work_command.rs  local_work_list.rs  mailspace.rs  main.rs  message.rs  message_test.rs  (+49 more)
tests/: cli.rs  hygiene.rs  local_mailspace_cli.rs
(+114 files in other folders)
