[package]
name = "vivarium"
version = "1.4.0"
edition = "2024"
autobins = false

[[bin]]
name = "vivi"
path = "src/main.rs"

[features]
outbox = []

[dependencies]
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
async-trait = "0.1"
tokio-native-tls = "0.3"
native-tls = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mail-builder = "0.3"
mail-parser = "0.9"
notify = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"

[profile.dev]
incremental = false
debug = "line-tables-only"
