[package]
name = "vivi-pty"
version = "6.2.0"
edition = "2024"
description = "Project-scoped PTY runtime adapter for Vivi-managed Fleets"
license = "MIT"
autobins = false

[[bin]]
name = "vivi-pty"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
vivarium = { path = "../.." }
vt100 = "0.16"

[dev-dependencies]
tempfile = "3"
